--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=${DB_SERVER};Database=${DB_NAME};User Id=${DB_USER};Password=${DB_PASSWORD};TrustServerCertificate=True;"
+    "DefaultConnection": "Server=dpg-d15f5j15pdvs73f8esb0-a.oregon-postgres.render.com;Database=riseup;User Id=riseup_user;Password=LW7A2tcifVKpZxvhiU5LpNFQ3oTtkF8u;TrustServerCertificate=True;"
   },
   "JwtSettings": {
     "Key": "${JWT_KEY}",
