--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,17 +1,18 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=RiseUpDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=riseupdb;Username=postgres;Password=postgres"
   },
   "JwtSettings": {
-    "Key": "aTSmFJGju7evlq2dol2BKk/NWF4ba1bwhkRQX1R+WHo=",
+    "Key": "sua-chave-secreta-muito-segura-com-pelo-menos-32-caracteres",
     "Issuer": "RiseUpAPI",
     "Audience": "RiseUpUsers",
-    "ExpirationInMinutes": 60
+    "DurationInMinutes": 60
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information",
+      "Microsoft.EntityFrameworkCore": "Information"
     }
   }
 }
