--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,12 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=${DB_SERVER};Database=${DB_NAME};User Id=${DB_USER};Password=${DB_PASSWORD};TrustServerCertificate=True;"
+    "DefaultConnection": "Host=postgres;Port=5432;Database=riseupdb;Username=postgres;Password=postgres"
   },
   "JwtSettings": {
-    "Key": "${JWT_KEY}",
-    "Issuer": "${JWT_ISSUER}",
-    "Audience": "${JWT_AUDIENCE}",
-    "ExpirationInMinutes": 60
+    "Key": "sua-chave-secreta-muito-segura-com-pelo-menos-32-caracteres",
+    "Issuer": "RiseUpAPI",
+    "Audience": "RiseUpUsers",
+    "DurationInMinutes": 60
   },
   "Logging": {
     "LogLevel": {
