corrigindo variaveis do bd

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,15 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres;Port=5432;Database=riseupdb;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=dpg-d15f5j15pdvs73f8esb0-a.oregon-postgres.render.com;Database=riseup;Username=riseup_user;Password=LW7A2tcifVKpZxvhiU5LpNFQ3oTtkF8u;SSL Mode=Require;Trust Server Certificate=true"
+  },
+  "Database": {
+    "Server": "dpg-d15f5j15pdvs73f8esb0-a.oregon-postgres.render.com",
+    "Name": "riseup",
+    "User": "riseup_user",
+    "Password": "LW7A2tcifVKpZxvhiU5LpNFQ3oTtkF8u"
   },
   "JwtSettings": {
-    "Key": "sua-chave-secreta-muito-segura-com-pelo-menos-32-caracteres",
+    "Key": "aTSmFJGju7evlq2dol2BKk/NWF4ba1bwhkRQX1R+WHo=",
     "Issuer": "RiseUpAPI",
     "Audience": "RiseUpUsers",
     "DurationInMinutes": 60
